--- a/src/app/root/header/header.component.scss
+++ b/src/app/root/header/header.component.scss
@@ -192,7 +192,7 @@ header {
         font-family: $font-family-slap;
 
         font-size: 3vw !important;
-        line-height: 15vw;
+        line-height: 15vh;
         //text-space: 0.9em;
         display: inline;
         color: $title-color;
