--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,20 @@
 
 <div class="wrapper">
-  <h1>Welcome to the page</h1>
+  <h1 (click)="sceneStart()">Welcome to the page</h1>
   <div class="content-middle">
     Home goes here
   </div>
 </div>
+<div class="scene_wrapper">
+  <div class="frame sky"></div>
+  <div class="frame tree1"></div>
+  <div class="frame tree2"></div>
+  <div class="frame tree3"></div>
+  <div class="frame tree4"></div>
+  <div class="frame element1"></div>
+  <div class="frame flower">
 
+  </div>
+  <div class="frame flower2"></div>
+  <div class="frame border"></div>
+</div>
