--- a/src/app/code/code.component.html
+++ b/src/app/code/code.component.html
@@ -1,3 +1,22 @@
-<p>
-  code works!
-</p>
+
+<div class="wrapper">
+  <h1>CODING</h1>
+  <div class="content-middle">
+    <div id="move" class="number">
+      03
+    </div>
+    <div class="image-container" id="move2">
+      <img src="/assets/photos/screen.png" class="image-section">
+    </div>
+    <div class="description" id="move4">
+      <div class="text-box">
+        <h2>
+          Love <br/>coding
+        </h2>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
