--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,23 @@
 
 <div class="wrapper">
-  <h1 (click)="sceneStart()">Welcome to the page</h1>
+  <h1>About</h1>
   <div class="content-middle">
-    Home goes here
+    <div id="move" class="number">
+      01
+    </div>
+    <div class="image-container" id="move2">
+      <img src="/assets/photos/IMG_20170614_102559-01.jpeg" class="image-section">
+    </div>
+    <div class="description" id="move4">
+      <div class="text-box">
+        <h2>
+          Create <br/>user experience
+        </h2>
+        I love to create clean and user friendly interfaces with clean and responsive design by using SCSS, JavaScript and Node.JS
+      </div>
+    </div>
+
   </div>
+
 </div>
 
