--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,3 +1,22 @@
-<p>
-  photos works!
-</p>
+
+<div class="wrapper">
+  <h1>photography</h1>
+  <div class="content-middle">
+    <div id="move" class="number">
+      02
+    </div>
+    <div class="image-container" id="move2">
+      <img src="/assets/photos/IMG_20170614_102559-01.jpeg" class="image-section">
+    </div>
+    <div class="description" id="move4">
+      <div class="text-box">
+        <h2>
+          make <br/>creative photos
+        </h2>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
