--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,27 +1,35 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:100,300,600,800|Lato:100,300,600,800');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500|Open+Sans:300,400,600,700');
 
 //@import '../../node_modules/font-awesome/scss/font-awesome.scss';
 
-$font-family-base: 'Lato', sans-serif;
-$font-family-slap: 'Open Sans', serif;
+$font-family-base: 'Open Sans', sans-serif;
+$font-family-slap: 'Montserrat', serif-serif;
 
-$title-color: #f1f1f1;
-$font-color: #ece1c8;
-$light-color: #fff;
-
+$title-color: #fff;
+$font-color: #fefefe;
+$light-color: #818f9b;
+$nav-button-color: #fff;
+*{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 body{
-  //background-image: url(/assets/images/page_bg.png);
+  //background-image: url(/assets/images/navigation_bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: radial-gradient(circle farthest-corner at center, #3c4b57 0%, #1c262b 100%);
+  background: #23075d;
+  background: -moz-linear-gradient(45deg,#23075d 0,#b2efef 100%);
+  background: -webkit-linear-gradient(45deg,#23075d 0,#b2efef 100%);
+  background: linear-gradient(45deg,#23075d 0,#b2efef 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23075d', endColorstr='#b2efef', GradientType=1 );
   height: 100vh;
   font-size: .9rem;
   color: $font-color;
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-base;
   letter-spacing: -0.05em;
-
+  overflow: hidden;
   h1,h2,h3,h4,h5,h6{
     font-family: $font-family-slap;
     text-transform: uppercase;
@@ -30,19 +38,22 @@ body{
     letter-spacing: -0.05em;
   }
   h1{
-    font-size: 1.9em;
+    font-size: 1.75em;
+    margin-top: -60px;
+    letter-spacing: 1rem;
+    font-weight: 300;
     &:before{
       background: $font-color;
       color: #000;
       font-size: 0.3em;
       position: relative;
-      font-weight: 800;
+      font-weight: 100;
       letter-spacing: -.1em;
       top: -20px;
       left: 25px;
       padding: 3px 5px;
-      font-family: "Montserrat", sans-serif;
-      content: 'LOTTES';
+      font-family: $font-family-slap;
+      //content: 'LOTTES';
       opacity: 0.15;
       -webkit-transform: rotate(-8deg);
       -moz-transform: rotate(-8deg);
@@ -51,6 +62,10 @@ body{
       transform: rotate(-8deg);
       display: inline-block;
     }
+  }
+  h2{
+    font-weight: 300;
+    font-size: 1.5rem;
   }
   &:before,
   &:after{
@@ -63,7 +78,6 @@ body{
     z-index:1;
 
   }
-
   &:before{
     top: 0;
     transform: translateY(-100%);
@@ -77,9 +91,10 @@ body{
     text-align: center;
     z-index: 200;
     position: relative;
+    padding: 0 5vw;
     .content-middle {
-      padding: 2em 3em 4em 3em;
-      margin: 3em auto;
+      padding: 10em 3em 4em 3em;
+      margin: 5em auto;
       //background: transparentize(#fff,.9);
       line-height: 1.7em;
       max-width: 1200px;
@@ -88,6 +103,51 @@ body{
         font-weight: 800;
         letter-spacing: 2px;
         margin-bottom: 1.2em;
+      }
+      .number{
+        position: absolute;
+        //top: 10rem;
+        left: -20rem;
+        right: 0;
+        font-size: 18.75rem;
+        opacity: 0.04;
+        font-weight: bold;
+        color: $nav-button-color;
+      }
+      .image-container{
+        position: absolute;
+        display: block;
+        width: 45vw;
+        height: auto;
+        //left: 5vw;
+        margin-top: 5vh;
+        -webkit-box-shadow: 10px 20px 70.28px 8.72px rgba(0,0,0,.2);
+        box-shadow: 10px 20px 70.28px 8.72px rgba(0,0,0,.2);
+        .image-section {
+          display: block;
+          width: 100%;
+          height: auto;
+          -o-object-fit: cover;
+          object-fit: cover;
+        }
+      }
+      .description{
+        text-align: center;
+        position: relative;
+        width: 60vw;
+        margin: 0;
+        right: -10vw;
+        top: 10vh;
+        padding-left: 20vw;
+        .text-box{
+          text-align: left;
+          position: absolute;
+          left: 35vw;
+          padding: 1rem;
+        }
+        //top: 15rem;
+        //left: 50vw;
+        //right: 0;
       }
     }
   }
