--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
         <h2>
           Create <br/>user experience
         </h2>
-        I love to create clean and user friendly interfaces with clean and responsive design by using SCSS, JavaScript and Node.JS
+        I love to create clean and user friendly interfaces in a responsive way by using SCSS, JavaScript and Node.JS
       </div>
     </div>
 
