--- a/src/app/root/intro/intro.component.scss
+++ b/src/app/root/intro/intro.component.scss
@@ -4,9 +4,20 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
-  background-image: radial-gradient(circle farthest-corner at center, #3c4b57 0%, #1c262b 100%);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background: #23075d;
+  background: -moz-linear-gradient(45deg,#23075d 0,#b2efef 100%);
+  background: -webkit-linear-gradient(45deg,#23075d 0,#b2efef 100%);
+  background: linear-gradient(45deg,#23075d 0,#b2efef 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23075d', endColorstr='#b2efef', GradientType=1 );
 
   z-index: 1002;
+  color: $font-color;
+  font-weight: 400;
+  //letter-spacing: 1rem;
+  text-transform: uppercase;
   .load {
     z-index: 1;
     position: absolute;
@@ -15,7 +26,6 @@
     top: 50%;
     margin: auto;
     max-width: 500px;
-    color: #fff;
     text-align: center;
     -moz-transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
@@ -28,8 +38,7 @@
   .load .quote {
     margin-top: 1em;
     font-size: 23px;
-    font-weight: lighter;
-    color: #ccc;
+    //font-weight: lighter;
   }
 
   .element-invisible {
@@ -88,9 +97,6 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    //background-image: radial-gradient(circle farthest-corner at center, #3c4b57 0%, #1c262b 100%);
-    background-image: url(/assets/images/IMG_20170613_141038-01.jpeg);
-    background-size: cover;
     .browser {
       display: inline-block;
       position: absolute;
@@ -242,9 +248,9 @@
       }
     }
     .more {
-      color: #fefefe;
-      font-weight: bold;
-      text-transform: uppercase;
+      //color: #fefefe;
+      //font-weight: bold;
+      //text-transform: uppercase;
       white-space: nowrap;
       text-align: center;
       span {
@@ -275,8 +281,8 @@
       .quote {
         margin-top: 1em;
         font-size: 23px;
-        font-weight: lighter;
-        color: #ccc;
+        //font-weight: lighter;
+        //color: #ccc;
       }
     }
 
@@ -286,10 +292,11 @@
       bottom: 0;
       margin-top: -150px;
       width: 100%;
-      color: #999;
+      //color: #999;
       text-align: center;
       text-transform: uppercase;
-      font-weight: bold;
+      letter-spacing: 0.5rem;
+      //font-weight: bold;
     }
 
     .aboutText {
@@ -309,7 +316,7 @@
     padding: 25px;
     text-align: center;
     z-index: 1002;
-    font-weight: 800;
+    //font-weight: 800;
     cursor: pointer;
     line-height: 25px;
     i{
